@@ -5,6 +5,7 @@
 * Better support of Python extensions
 * Add an icon and version info to the Windows daemon
 * Allow local IPs
+* Bloom plugin: filter more TTH searches
 
 -- 2.4 2008-10-02 --
 * Improve Lua scripts
